--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,55 +4,73 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Technically Speaking</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.7/tailwind.min.css">
+  <title>jBlog</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-  <link rel="stylesheet" href="/stylesheets/style.css">
+  <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" />
+  <link rel="stylesheet" href="/css/style.css">
   <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
 </head>
 
-<div class="">
-    <header>
-        <h1 class="has-text-black px-3 py-3 has-text-weight-bold">technically speaking: a tech blog</h1>
-        <nav class="navbar mt-2">
-            {{#if loggedIn}}
-            <a href="/" class="navbar-item is-hoverable pt-1">Homepage</a>
-            <a href="/dashboard" class="navbar-item is-hoverable pt-1">Dashboard</a>
-            <button id="logout" class="button is-danger">Logout</button>
-            {{else}}
-            <a href="/" class="navbar-item is-hoverable pt-1">Homepage</a>
-            <a href="/login" class="button is-primary">Login</a>
-            {{/if}}
-        </nav>
-    </header>
 
-    <main>
-            {{{ body }}}
-    </main>
+<header>
+  <nav class="navbar has-background-grey-light" role="navigation">
+    <div class="navbar-brand">
+      <i class="far fa-grin-alt fa-4x"></i>
+    </div>
+    <div class="navbar-start">
+      <div class="headerStrong">jBlog</div>
+    </div>
+    <div class="navbar-end">
+      {{#if loggedIn}}
+      <a href="/" class="navbar-item has-text-dark">Homepage</a>
+      <a href="/blog" class="navbar-item has-text-dark">jBlog</a>
+      <a href="/logout" class="navbar-item has-text-dark">Logout</a>
+      {{else}}
+      <a href="/" class="navbar-item has-text-dark">Homepage</a>
+      <a href="/login" class="navbar-item has-text-dark">Login</a>
+      <a href="/signup" class="navbar-item has-text-dark">Signup</a>
+      {{/if}}
+    </div>
+  </nav>
+</header>
 
-    <footer class="footer rows pb-2">
-        <div class="row-is-full content has-text-centered">
-            <p>
-            <a href="/">Homepage</a>{{#if loggedIn}} | 
-            <a href="/dashboard/">Dashboard</a> | 
-            {{else}}
-             | <a href="/login/">login</a>
-            {{/if}}
-            </p>
-        </div>
-      <div class="row-is-full content has-text-centered">
+<main>
+  {{{ body }}}
+</main>
+
+
+<footer class="footer has-background-grey-light">
+  <div class="container">
+    <div class="content has-text-centered has-text-light">
+      <p>
+        <a href="/">Homepage</a>{{#if loggedIn}} |
+        <a href="/dashboard/">Dashboard</a> |
+        {{else}}
+        | <a href="/login/">login</a>
+        {{/if}}
+      </p>
+    </div>
+  </div>
+  <div class="content has-text-centered has-text-light">
     <p>
-      <strong>technically speaking</strong> by <a href="https://github.com/priyaravi23">Priya Ravi</a> | made with <a href="https://bulma.io/">bulma</a> | source code:
-      <a href="https://github.com/priyaravi23/mvc-tech-blog"><i class="fab fa-github"></i></a> |  
-       <a href="mailto:priyaravi23@gmail.com"><i class="far fa-envelope"></i></a>
+      <span class="strongBlue">jBlog</span> by <a href="https://github.com/jeffseverson2001">Jeff Severson</a> | made
+      with <a href="https://bulma.io/">bulmacss</a> | source code:
+      <a href="https://github.com/jeffseverson2001"><i class="fab fa-github"></i></a> |
+      <a href="mailto:jeff@jefflizseverson.com"><i class="far fa-envelope"></i></a>
     </p>
   </div>
-    </footer>
-  </div>
+</footer>
+</div>
 
 {{#if loggedIn}}
 <script src="/javascript/logout.js"></script>
 {{/if}}
+
+<script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<script src="/js/script.js"></script>
+
 </body>
 
 </html>
