--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,5 +1,7 @@
 <!-- Loop over each object in the blog array -->
 
+{{message}}
+
 {{#each blogs as |blog| }}
 <div class="container">
     <div class="box mx-4 my-2">
