--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,16 +1,21 @@
 <div class="section">
-    <form class="box is-rounded">
+    {{#if message}}
+    <div class="">
+        {{message}} --- HELLO
+    </div>
+    {{/if}}
+    <form class="box is-rounded" id="login-form">
         <div class="field">
-            <label class="label">Email</label>
+            <label class="label">User Name</label>
             <div class="control">
-                <input class="input" type="email" placeholder="e.g. alex@example.com">
+                <input class="input" type="username" id="username-login" placeholder="e.g. John">
             </div>
         </div>
 
         <div class="field">
             <label class="label">Password</label>
             <div class="control">
-                <input class="input" type="password" placeholder="********">
+                <input class="input" type="password" id="password-login" placeholder="********">
             </div>
         </div>
 
