Signup Writing and Session Var Update

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,6 +1,6 @@
 <!-- Loop over each object in the blog array -->
 
-{{message}}
+{{user_id}} {{user_name}}
 
 {{#each blogs as |blog| }}
 <div class="container">
