--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,23 +1,23 @@
 <div class="section">
-    <form class="box is-rounded">
+    <form class="box is-rounded" id="signup-form">
         <div class="field">
             <label class="label">User Name</label>
             <div class="control">
-                <input class="input" type="username" placeholder="e.g. User Name">
+                <input class="input" type="username" id="username-signup" placeholder="e.g. User Name">
             </div>
         </div>
 
         <div class="field">
             <label class="label">Email</label>
             <div class="control">
-                <input class="input" type="email" placeholder="e.g. alex@example.com">
+                <input class="input" type="email" id="email-signup" placeholder="e.g. alex@example.com">
             </div>
         </div>
 
         <div class="field">
             <label class="label">Password</label>
             <div class="control">
-                <input class="input" type="password" placeholder="********">
+                <input class="input" type="password" id="password-signup" placeholder="********">
             </div>
         </div>
 
