--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,5 +21,13 @@ a {
     color: #20B2AA;
     font-weight: bolder;
     font-size: 40px;
-    padding-left: 30rem;
+}
+
+.buttonBlue {
+    color: white;
+    background-color: #20B2AA;
+}
+
+.hide {
+    display: none;
 }
