--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,10 +16,10 @@
 <header>
   <nav class="navbar has-background-grey-light" role="navigation">
     <div class="navbar-brand">
-      <i class="far fa-grin-alt fa-4x"></i>
+      <i class="navbar-item far fa-grin-alt fa-6x"></i>
     </div>
     <div class="navbar-start">
-      <div class="headerStrong">jBlog</div>
+      <div class="navbar-item headerStrong">jBlog</div>
     </div>
     <div class="navbar-end">
       {{#if logged_in}}
