--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -3,14 +3,14 @@
         <div class="field">
             <label class="label">User Name</label>
             <div class="control">
-                <input class="input" type="username" id="username-signup" placeholder="e.g. User Name">
+                <input class="input" type="text" id="username-signup" placeholder="e.g. User Name">
             </div>
         </div>
 
         <div class="field">
             <label class="label">Email</label>
             <div class="control">
-                <input class="input" type="email" id="email-signup" placeholder="e.g. alex@example.com">
+                <input class="input" type="text" id="email-signup" placeholder="e.g. alex@example.com">
             </div>
         </div>
 
