--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -6,8 +6,7 @@
         <div class="box strongBlue has-background-grey-light px-4 py-2">
             <div class="level">
                 <span class="level-left">
-                    <!-- <a href="/api/blogs/{{blog.id}}">{{blog.title}}</a> -->
-                    <p class="">{{blog.title}}</p>
+                    <p>{{blog.title}}</p>
                 </span>
                 <span class="level-right">
                     Created by {{blog.user.username}} on {{format_date blog.date_created}}
