--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -8,7 +8,7 @@
         <div class="field">
             <label class="label">User Name</label>
             <div class="control">
-                <input class="input" type="username" id="username-login" placeholder="e.g. John">
+                <input class="input" type="text" id="username-login" placeholder="e.g. John">
             </div>
         </div>
 
