Blog Form Submitting

--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -6,6 +6,7 @@
             jBlog</button>
     </div>
     <form class="box is-rounded hide" id="show-blog-form">
+        <!-- <input type="hidden" id="content-user-id" value="{{user_id}}"> -->
         <div class="field">
             <label class="label">Title</label>
             <div class="control">
