Fixed Login Error Message

--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -1,12 +1,13 @@
 <!-- Loop over users object for the blog array -->
 
+ID: {{user_id}}
+
 <div class="container">
     <div class="level px-4 py-2">
         <button class="level-item has-text-centered button buttonBlue is-medium" id="show-blog-form-button">Add A New
             jBlog</button>
     </div>
-    <form class="box is-rounded hide" id="show-blog-form">
-        <!-- <input type="hidden" id="content-user-id" value="{{user_id}}"> -->
+    <form class="box is-rounded hide" id="show-blog-form" data-id="{{user_id}}">
         <div class="field">
             <label class="label">Title</label>
             <div class="control">
