--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -30,7 +30,7 @@
             </div>
             {{#if comments}}
             {{#each comments as |comment| }}
-            <div class="box px-4 py-0 hide all-comments" id="show-comments" data-id="{{comment.blog_id}}">
+            <div class="box px-4 py-0 all-comments" id="show-comments" data-id="{{comment.blog_id}}">
                 <div class="level px-2 py-2">
                     <span class="level-left">
                         {{comment.comment}}
