--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,10 +1,11 @@
 <div class="section">
-    {{#if message}}
+    <!-- {{#if message}}
     <div class="">
         {{message}} --- HELLO
     </div>
-    {{/if}}
+    {{/if}} -->
     <form class="box is-rounded" id="login-form">
+        <h3 class="notification strongBlue">Log In</h3>
         <div class="field">
             <label class="label">User Name</label>
             <div class="control">
@@ -21,6 +22,7 @@
 
         <button class="button is-primary">Sign in</button>
     </form>
+    <a href="/signup">Sign Up Instead</a>
 </div>
 
 <script src="/js/login.js"></script>
