--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,5 +1,6 @@
 <div class="section">
     <form class="box is-rounded" id="signup-form">
+        <h3 class="notification strongBlue">Sign Up</h3>
         <div class="field">
             <label class="label">User Name</label>
             <div class="control">
@@ -23,6 +24,7 @@
 
         <button class="button is-primary">Sign Up</button>
     </form>
+    <a href="/login">Log In Instead</a>
 </div>
 
 <script src="/js/signup.js"></script>
