--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -7,7 +7,7 @@
             <div class="level">
                 <span class="level-left">
                     <!-- <p>{{blog.title}}</p> -->
-                    <a href="/blog/{{blog.id}}">{{blog.title}}</a>
+                    <a href="/dashboad/{{blog.id}}">{{blog.title}}</a>
                 </span>
                 <span class="level-right">
                     Created by {{blog.user.username}} on {{format_date blog.date_created}}
