--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -1,4 +1,3 @@
-<!-- Loop over users object for the blog array -->
 
 <div class="container">
     <div class="level px-4 py-2">
@@ -8,14 +7,14 @@
         <div class="field">
             <label class="label">Title</label>
             <div class="control">
-                <input class="input" type="text" id="title-blog-edit" placeholder="e. g. What is on your mind?">
+                <input class="input" type="text" id="title-blog-edit" value="{{blogs.title}}" data-id="{{blogs.title}}">
             </div>
         </div>
 
         <div class="field">
             <label class="label">Content</label>
             <div class="control">
-                <input class="input" type="text" id="content-blog-edit" placeholder="e.g. Say what is on your mind?">
+                <input class="input" type="text" id="content-blog-edit" value="{{blogs.content}}" data-id="{{blogs.content}}">
             </div>
         </div>
 
