--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -3,7 +3,7 @@
     <div class="level px-4 py-2">
         <button class="level-item has-text-centered button buttonBlue is-medium" id="show-edit-blog-form-button">Edit Your jBlog</button>
     </div>
-    <form class="box is-rounded hide" id="show-edit-blog-form">
+    <form class="box is-rounded hide" id="show-edit-blog-form" data-id="{{blogs.id}}">
         <div class="field">
             <label class="label">Title</label>
             <div class="control">
