--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -1,3 +1,4 @@
+<!--  This is the Blog Page  -->
 
 <div class="container">
     <div class="level px-4 py-2">
@@ -20,6 +21,7 @@
 
         <button class="button is-primary is-light" id="edit-blog-button" data-id="{{user_id}}">Change</button>
         <button class="button is-danger is-light" id="cancel-edit-blog-button">Cancel</button>
+        <button class="button is-danger" id="delete-blog-button" data-id="{{user_id}}">Delete</button>
     </form>
 </div>
 
