--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,5 +1,29 @@
-<!-- Loop over users object for the blog array -->
+<!-- Dashboard Page -->
 
+<div class="container">
+    <div class="level px-4 py-2">
+        <button class="level-item has-text-centered button buttonBlue is-medium" id="show-blog-form-button">Add A New
+            jBlog</button>
+    </div>
+    <form class="box is-rounded hide" id="show-blog-form">
+        <div class="field">
+            <label class="label">Title</label>
+            <div class="control">
+                <input class="input" type="text" id="title-blog-new" placeholder="e. g. What is on your mind?">
+            </div>
+        </div>
+
+        <div class="field">
+            <label class="label">Content</label>
+            <div class="control">
+                <input class="input" type="text" id="content-blog-new" placeholder="e.g. Say what is on your mind?">
+            </div>
+        </div>
+
+        <button class="button is-primary is-light" id="add-blog-button" data-id="{{user_id}}">Post</button>
+        <button class="button is-danger is-light" id="cancel-blog-button">Cancel</button>
+    </form>
+</div>
 
 {{#each blogs as |blog| }}
 <div class="container">
@@ -34,5 +58,13 @@
         </div>
     </div>
     {{/each}}
+
+<!-- 
+    <div class="container">
+        <div class="level px-4 py-2">
+            <a href="/dashboard/new" data-id="">Add New jBlog</a>
+        </div>
+    </div>
+-->
 
     <script src="/js/dashboard.js"></script>
