--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -40,7 +40,7 @@
         </div>
         <div class="box has-background-white-ter px-4 py-0">
             <div class="level subtitle is-6 px-2 py-2">
-                <span class="level-left">
+                <span class="level-left has-text-weight-bold">
                     {{blog.content}}
                 </span>
             </div>
