--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,5 +1,6 @@
 <!-- Loop over each object in the blog array -->
 
+
 {{#each blogs as |blog| }}
 <div class="container">
     <div class="box mx-4 my-2">
@@ -7,7 +8,7 @@
             <div class="level">
                 <span class="level-left">
                     <!-- <p>{{blog.title}}</p> -->
-                    <a href="/comments/{{blog.id}}">{{blog.title}}</a>
+                    <a href="/dashboard/comments/{{blog.id}}">{{blog.title}}</a>
                 </span>
                 <span class="level-right">
                     Created by {{blog.user.username}} on {{format_date blog.date_created}}
@@ -16,7 +17,7 @@
         </div>
         <div class="box has-background-white-ter px-4 py-0">
             <div class="level subtitle is-6 px-2 py-2">
-                <span class="level-left">
+                <span class="level-left has-text-weight-bold">
                     {{blog.content}}
                 </span>
             </div>
@@ -28,11 +29,9 @@
                 <span class="level-left">
                     {{comment.comment}}
                 </span>
-                {{#if logged_in}}
                 <span class="level-right">
-                    <button class="button is-primary is-light" id="add-comment-button" data-id="{{user_id}}">Change</button>
+                    Created on {{format_date comment.date_created}}
                 </span>
-                {{/if}}
             </div>
         </div>
         {{/each}}
