Update Comments Gage

--- a/views/comments.handlebars
+++ b/views/comments.handlebars
@@ -48,7 +48,7 @@
                 <span class="level-right">
                     Created on {{format_date comment.date_created}}
                     <span class="level-right pl-4">
-                        <button class="button is-small is-danger" id="delete-comment-button" data-id="{{comment.id}}">Delete</button>
+                        <button class="button is-small is-danger delete-comment-button" data-id="{{comment.id}}">Delete</button>
                     </span>
                 </span>
             </div>
